tests/ui/issues/issue-38919.rs
fn foo<T: Iterator>() {
    T::Item; //~ ERROR no associated item named `Item` found
}

fn main() { }
